# agent-mcp

./: .dockerignore  .gitignore  .mcp.json.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.claude/kickoffs/: README.md
.github/workflows/: ci.yml  fleet-ci.yml  release.yml
docs/: ASSESSMENT.md  INTEGRATIONS.md  ROADMAP.md  mcp.example.json
docs/tero-index/: INDEX.md  MANIFEST.toml  index.json
scripts/: check.sh
src/: error.rs  lib.rs  main.rs  orchestrator.rs  protocol.rs  router.rs  server.rs  tools.rs  workflow.rs
src/tools/: tests.rs
tests/: e2e_stdio.rs  integration_handshake.rs
